# Programmier-bung-2

./: README.md  example_1.py  load_data.py  my_module.py  power_curve.py  pyproject.toml  sort.py
