[project]
name = "programmieruebung2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pia", email = "pm.schratt@mci4me.at"},
]
dependencies = ["numpy>=2.2.5", "matplotlib>=3.10.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
